# cognitive-final-project

./: .env.testing  .gitignore  ANALISIS_TAREAS_PENDIENTES.md  API_KEYS_SETUP.md  ARQUITECTURA_AWS.md  AWS_DEPLOYMENT_CHECKLIST.md  CLAUDE.md  CODIGO_COMPLETO_FASTAPI.md  CODIGO_TERRAFORM.md  DELIVERY.md  DEPLOYMENT_AWS.md  E2E_TESTING_GUIDE.md  E2E_VALIDATION_REPORT.md  ESTADO_IMPLEMENTACION.md  FINAL_CHECKLIST.md  FINAL_E2E_VALIDATION_REPORT.md  GUIA_IMPLEMENTACION_RAPIDA.md  GUIA_TESTING_LOCAL.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  INFORME.md  INFORME_ACTUALIZADO.md  INFORME_RUBRICA.md  MANUAL_DEPLOYMENT_AWS.md  MIGRACION_FASTAPI.md  MISSING_PARTS_FIXED.md  PLAN_VALIDACION.md  PROJECT_STATUS.md  PROYECTO_LISTO.md  QUICK_START_TESTING.md  README.md  README_DEPLOYMENT.md  READY_TO_TEST.md  REQUIRED_API_KEYS.md  RESUMEN_FINAL_IMPLEMENTACION.md  SESSION_SUMMARY.md  START_TESTING.sh  START_TESTING_NOW.md  SYSTEM_STATUS.md  TAREAS_TRABAJO_FINAL.md  (+7 more)
backend/: .env.example  Dockerfile  README.md  alembic.ini  build_lambda.sh  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_add_admin_logs.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py
backend/app/admin/: __init__.py  views.py
backend/app/core/: exceptions.py  security.py
backend/app/lambda_handlers/: frame_processor.py
backend/app/middleware/: __init__.py  audit.py
backend/app/models/: __init__.py  admin_log.py  device.py  face.py  faq.py  image.py  (+5 more)
backend/tests/: __init__.py  conftest.py
core/: .dockerignore  .env  .env.example  Dockerfile  README.md  db.sqlite3  manage.py  pyproject.toml  run_server.sh
core/accounts/: admin.py  models.py  serializers.py  urls.py  views.py
core/incidents/: admin.py  models.py  serializers.py
core/reports/: admin.py  models.py  serializers.py
core/taxiwatch/: __init__.py  asgi.py  celery.py  routing.py  settings.py  settings_dev.py  urls.py  wsgi.py
core/tracking/: admin.py  models.py  serializers.py
core/vehicles/: admin.py  models.py  serializers.py  urls.py  views.py
core/video/: admin.py  models.py  serializers.py
(+137 files in other folders)
